--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "yiyuan",
-    "appid" : "__UNI__F0C76E1",
+    "appid" : "__UNI__E31470C",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -18,8 +18,7 @@
         },
         /* 模块配置 */
         "modules" : {
-            "OAuth" : {},
-            "Maps" : {}
+            "OAuth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -50,8 +49,8 @@
             "sdkConfigs" : {
                 "oauth" : {
                     "weixin" : {
-                        "appid" : "wx49cf4c1a35a010c7",
-                        "appsecret" : "55bbaba9eef748b5b936dd70f0cfbfdb",
+                        "appid" : "wx6bc971c4dd6738e9",
+                        "appsecret" : "8ec0f9e1a0942dca4f89f10482069645",
                         "UniversalLinks" : ""
                     }
                 },
@@ -68,7 +67,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wx49cf4c1a35a010c7",
+        "appid" : "wx6bc971c4dd6738e9",
         "setting" : {
             "urlCheck" : true,
             "es6" : true,
