--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
         /* 模块配置 */
         "modules" : {
             "OAuth" : {},
-            "Maps" : {}
+            "Maps" : {},
+            "Messaging" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -39,9 +40,12 @@
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
+                    "<uses-permission android:name=\"android.permission.READ_SMS\"/>",
+                    "<uses-permission android:name=\"android.permission.SEND_SMS\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>",
+                    "<uses-permission android:name=\"android.permission.WRITE_SMS\"/>"
                 ]
             },
             /* ios打包配置 */
@@ -57,8 +61,8 @@
                 },
                 "maps" : {
                     "baidu" : {
-                        "appkey_ios" : "",
-                        "appkey_android" : ""
+                        "appkey_ios" : "iZvozaLbPDbkIselWdjUCLMt2OLGeOCN",
+                        "appkey_android" : "C38cZAjaAkLjbmECk42MFbAPTXevrrwi"
                     }
                 }
             }
@@ -88,5 +92,14 @@
     },
     "uniStatistics" : {
         "enable" : false
+    },
+    "h5" : {
+        "sdkConfigs" : {
+            "maps" : {
+                "qqmap" : {
+                    "key" : "YVDBZ-AFD3V-HTCPC-UUFUF-WDGR7-FMFV6"
+                }
+            }
+        }
     }
 }
