--- a/manifest.json
+++ b/manifest.json
@@ -73,7 +73,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wx74b522025864a906",
+        "appid" : "",
         "setting" : {
             "urlCheck" : true,
             "es6" : true,
